--- a/app/assets/stylesheets/favorites.scss
+++ b/app/assets/stylesheets/favorites.scss
@@ -1,3 +1,14 @@
 // Place all the styles related to the favorites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#tags {
+  border-bottom: solid 1px #eee;
+}
+#tags a {
+  width: 100%;
+  padding: 10px;
+  display: block;
+  color: #333;
+  border-bottom: solid 1px #eee;
+}
