--- a/app/views/favorites/index.html.slim
+++ b/app/views/favorites/index.html.slim
@@ -1,2 +1,12 @@
-h1 Favorites#index
-p Find me in app/views/favorites/index.html.slim
+/ TODO: form.action, hrefは、routeに追加されるまでハードコーディング
+
+= form_tag "/feeds", {method: "get", id: "text_search_form"}  do
+  .row
+    .col.md-12
+      = text_field_tag :keyword, "", class: "form-control"
+
+#tags
+  .row
+    .col.md-12 v-for="tag in tags"
+      a href="/feeds?keyword={{ tag }}"
+        = "{{ tag }}"
