modify: favorites/index [削除時の処理を実装]

--- a/app/views/favorites/index.html.slim
+++ b/app/views/favorites/index.html.slim
@@ -8,4 +8,4 @@
     .col.md-12.tag-row v-for="tag in tags"
       a href="feeds?keyword={{ tag }}"
         = "{{ tag }}"
-      .delete-btn.btn.btn-sm.btn-error 削除
+      .delete-btn.btn.btn-sm.btn-error onclick="" 削除
