--- a/app/views/favorites/index.html.slim
+++ b/app/views/favorites/index.html.slim
@@ -7,13 +7,13 @@
       div.btn-icon.xs-2.sm-1.md-1.center
         span.icon.icon-menu
 
-  = form_tag feeds_path, { method: "get", id: "text_search_form" }  do
+  = form_tag feeds_path, { method: "get" }  do
     #search
-      .col.sm-12.md-12.
-        = text_field_tag :keyword, "", class: "form-control input-keyword"
+      .col.md-12.
+        = text_field_tag :keyword, "", class: "form-control input-keyword", "v-on:change" => "keyword"
 
   .row
-    section.col.sm-12.md-12.swipe-tag v-for="tag in tags"
+    section.col.md-12.swipe-tag v-on:touchstart = "swipe_start" v-on:touchend = "swipe_end" v-on:touchmove = "swipe_move" v-for="tag in tags"
       a href="feeds?keyword={{ tag }}"
         = "{{ tag }}"
-      .delete-btn.btn.btn-sm.btn-error 削除
+      .delete-btn.btn.btn-sm.btn-error v-on:click = "delete" 削除
